<resources>
    <string name="app_name">Estoquista</string>
    <string name="navigation_drawer_open">Abrir navegação</string>
    <string name="navigation_drawer_close">Fechar navegação</string>
    <string name="nav_header_title">Usuário Anônimo</string>
    <string name="nav_header_desc">Cabeçalho navegação</string>

    <string name="nenhum_registro_encontrado">Nenhum registro encontrado</string>
    <string name="procurar">Procurar</string>
    <string name="nova_leitura">Nova Leitura</string>
    <string name="lixeira">Lixeira</string>
    <string name="menu_login">Entrar</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_add_leitura">Nova Leitura</string>
    <string name="menu_lixeira">Lixeira</string>
    <string name="coletor_de_dados">Coletor de Dados</string>
    <string name="instrucao_barcode">Posicione o código de barras no centro da tela</string>
    <string name="entendido">Entendido</string>
    <string name="no_camera_permission">O aplicativo não possui permissão para usar a câmera. Para liberar, vá em Configurações -> Aplicativos</string>
    <string name="atencao">Atenção</string>
    <string name="codigo_de_barras">Código de Barras</string>
    <string name="adicionar">Adicionar</string>
    <string name="aguardando_leitura">Aguardando Leitura</string>
    <string name="nenhum_produto_lido">Nenhum produto lido</string>
    <string name="x_produto">%s produto</string>
    <string name="x_produtos">%s produtos</string>
    <string name="sem_titulo">Sem Título</string>
    <string name="leitura_x">Leitura #%s</string>
    <string name="data_nao_informada">Data não informada</string>
    <string name="pendente">Pendente</string>
    <string name="finalizado">Finalizado</string>
    <string name="finalizar">Finalizar</string>
    <string name="exportar">Exportar</string>
    <string name="coletor_json">Arquivo no formato JSON</string>
    <string name="coletor_xml">Arquivo no formato XML</string>
    <string name="coletor_generico">Arquivo de entrada genérico</string>
    <string name="selecione_uma_opcao_exportacao">Selecione uma opção de exportação</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="insira_info_acesso">Insira suas informações de acesso</string>
    <string name="cnpj">CNPJ</string>
    <string name="coletor_csv">Planilha no formato CSV</string>
    <string name="excluir">Excluir</string>
    <string name="confirma_finalizacao_leitura">Deseja finalizar esta coleta? Coletas finalizadas não podem ser alteradas.</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="confirma_exclusao_leitura">Deseja excluir esta coleta? Este processo é irreversível.</string>
    <string name="modo_de_leitura">Modo de Leitura</string>
    <string name="modo_sequencial">Modo Sequencial</string>
    <string name="modo_contagem">Modo Contagem</string>
    <string name="titulo">Título</string>
    <string name="detalhes_da_coleta">Detalhes da Coleta</string>
    <string name="salvar">Salvar</string>
    <string name="fechar">Fechar</string>
    <string name="total_x">TOTAL: %s</string>
    <string name="lido_x">LIDO: %s</string>
    <string name="realize_login_para_prosseguir">É necessário realizar login para prosseguir</string>
    <string name="servidor_respondeu_vazio">O servidor retornou uma resposta vazia</string>
    <string name="usuario_nao_encontrado">Usuário não encontrado</string>
    <string name="nenhum_inventario_encontrado">Nenhum inventário em andamento do tipo COLETOR encontrado</string>
    <string name="usuario_nao_logado">Usuário não logado</string>
    <string name="selecione_uma_contagem_inventario">Selecione uma contagem de inventário para prosseguir</string>
    <string name="autenticando_usuario">Autenticando usuário</string>
    <string name="buscando_contagens_inventario">Buscando contagens de inventário</string>
    <string name="gerando_arquivo_exportacao">Gerando arquivo para exportação</string>
    <string name="arquivo_nao_encontrado">Arquivo não encontrado</string>
    <string name="sair">Sair</string>
    <string name="deseja_realmente_sair">Deseja realmente sair?</string>
    <string name="informe_a_quantidade">Informe a quantidade</string>
    <string name="quantidade">Quantidade</string>
    <string name="nenhum_numero_informado">Nenhum número informado</string>
    <string name="apenas_numeros_permitidos">Apenas números são permitidos</string>
    <string name="usuario_desconhecido">Usuário Desconhecido</string>
    <string name="confirma_mover_lixeira">Deseja mover esta coleta para lixeira?</string>
    <string name="conteudo_lixeira">Conteúdo da Lixeira</string>
    <string name="abrir">Abrir</string>
    <string name="deseja_abrir_leitura">Deseja abrir esta leitura?</string>
    <string name="excluido">Excluído</string>
    <string name="esvaziar">ESVAZIAR</string>
    <string name="deseja_esvaziar_lixeira">Deseja realmente esvaziar a lixeira? Todas as leituras da lixeira serão excluídas definitivamente. <b>Este processo é irreversível.</b></string>
    <string name="acessar">Acessar</string>
    <string name="escolha_uma_opcao">Escolha uma opção</string>
    <string name="leitura_com_consulta">Leitura com consulta</string>
    <string name="leitura_sem_consulta">Leitura sem consulta</string>
    <string name="carregando_dados">Carregando dados</string>
    <string name="isto_pode_demorar_alguns_minutos">Isto irá demorar alguns minutos.</string>
    <string name="oops">Oops!</string>
    <string name="ok">OK</string>
    <string name="nenhum_produto_encontrado">Nenhum produto encontrado</string>
    <string name="produto_nao_consta_inventario">Produto não consta no inventário</string>
    <string name="produto_nao_consta_nfe">Produto não consta na nota</string>
    <string name="carregando_pagina_x_de_y">Carregando página %d de %d</string>
    <string name="produto_nao_encontrado_no_inventario">Produto não encontrado na contagem de inventário.</string>
    <string name="inventario_x">Inventário #%s</string>
    <string name="iniciar">Iniciar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="digite_algum_valor_para_buscar">Digite algum valor para buscar</string>
    <string name="nao_ha_reconhecimento_de_voz">Não há reconhecimento de voz disponível no momento</string>
    <string name="permissao_gravar_audio_negada">Permissão para gravar áudio foi negada.</string>
    <string name="ler_codigo_de_barras">Ler Código de Barras</string>
    <string name="nenhum_resultado_encontrado">Nenhum resultado encontrado</string>
    <string name="retorno_servidor_inesperado">Retorno inesperado do servidor</string>
    <string name="erro_desconhecido">Erro desconhecido</string>
    <string name="tempo_de_conexao_esgotado">Tempo de conexão esgotado</string>
    <string name="erro_de_conexao">Erro de conexão</string>
    <string name="libere_permissao_gravar_audio">Não há permissão para gravar áudio</string>
    <string name="erro_gravar_audio">Erro ao gravar áudio</string>
    <string name="precisamos_permissao_gravar_audio">Precisamos da sua permissão para gravar áudio</string>
    <string name="sem_permissao_camera">O aplicativo não possui permissão para usar a câmera. Para liberar, vá em Configurações -> Aplicativos</string>
    <string name="sem_permissao_camera_disco">O aplicativo não possui permissão para usar a câmera nem o armazenamento externo. Para liberar, vá em Configurações -> Aplicativos</string>
    <string name="leitor_codigo_barras">Leitor de Código de Barras</string>
    <string name="ref_s">Ref.: %s</string>
    <string name="identificador_inventario_nao_encontrado">Identificador do inventário não encontrado</string>
    <string name="ean_nome_referencia">EAN, nome ou referência…</string>
    <string name="buscar">Buscar</string>

    <string name="validacao_finaliza_leitura_null">Não há nenhuma leitura para finalizar</string>
    <string name="validacao_exporta_leitura_null">Não há nenhuma leitura para exportar</string>
    <string name="validacao_finaliza_leitura_vazio">Não é possível finalizar pois não há itens</string>
    <string name="validacao_exporta_leitura_vazio">Não é possível exportar pois não há itens</string>
    <string name="validacao_finaliza_leitura_status">Somente leituras pendentes podem ser finalizadas</string>
    <string name="validacao_exporta_leitura_status">Somente leituras finalizadas podem ser exportadas</string>
    <string name="validacao_campo_obrigatorio">Este campo é obrigatório</string>
    <string name="validacao_cnpj_invalido">CNPJ inválido</string>
    <string name="validacao_coleta_nao_permite_alteracao">Esta coleta não permite alterações</string>
    <string name="selecionar">selecionar</string>
    <string name="selecione_um_formato_de_codigo_de_barras">Selecione um formato de código de barras:</string>
    <string name="selecione_um_inventario_para_consulta">Selecione um inventário para iniciar a consulta</string>
    <string name="outro_lote">Outro lote</string>
    <string name="selecione_o_lote_ao_qual_o_item_pertence">Selecione o lote ao qual o item pertence</string>
    <string name="concluido">Concluído</string>
    <string name="insira_um_nome_para_lote">Insira um nome para o lote</string>
    <string name="novo_lote">Novo lote</string>
    <string name="normal">Normal</string>
    <string name="ultimo_item_lido">Último item lido</string>
    <string name="serial">Serial</string>
    <string name="este_serial_ja_foi_lido">Este <b>serial</b> ja foi lido(inserido)</string>
    <string name="serial_nao_foi_encontrado">Serial não foi encontrado</string>
    <string name="tipo_leitura">Tipo leitura</string>
    <string name="contagem">Contagem</string>
    <string name="sequencial">Sequencial</string>
    <string name="leitura_de_serial_do_item_x">Leitura de serial do item %s</string>
    <string name="carregando">Carregando...</string>
    <string name="lotes">Lotes</string>
    <string name="nenhum_item_lido">Nenhum item lido</string>
    <string name="insira_um_serial">Insira um serial</string>
    <string name="insira_um_lote">Insira um lote</string>
    <string name="novo_serial">Novo serial</string>
    <string name="este_serial_ja_foi_inserido">Este serial ja foi inserido</string>
    <string name="leitura_lote">Leitura de lote</string>
    <string name="leitura_serial">Leitura de serial</string>
    <string name="lote">Lote</string>
    <string name="leitura_de_itens_do_lote_x">Leitura de itens do lote %s</string>
    <string name="insira_o_codigo_barras">Insira o código de barras de um item</string>
    <string name="insira_o_lote_para_iniciar_leitura_de_itens">Insira o lote para iniciar a leitura de itens</string>
    <string name="menu_conferencia_de_nota">Confêrencia de nota</string>
    <string name="mensagem_erro_conexao">Não foi possível se conectar ao servidor. Verifique sua conexão com a internet e tente novamente por favor.</string>
    <string name="carregando_leitura"> Carregando leitura...</string>
    <string name="leit_x">Leit. %s</string>
    <string name="aguarde_um_momentinho">Aguarde um momentinho...</string>

</resources>
