<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/btn_abrir"
            android:icon="@drawable/ic_lock_open_white_24dp"
            android:title="@string/abrir"
            android:visible="false"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/btn_modo_leitura"
            android:icon="@drawable/ic_icon_edit_list"
            android:title="@string/modo_de_leitura"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/btn_finalizar"
            android:icon="@drawable/ic_done_branco_24dp"
            android:title="@string/finalizar"
            android:visible="false"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/btn_exportar"
            android:icon="@drawable/ic_share_branco_24dp"
            android:title="@string/exportar"
            android:visible="false"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/btn_excluir"
            android:icon="@drawable/ic_delete_branco_24dp"
            android:title="@string/excluir"
            android:visible="false"
            app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_leitura_lote"
        android:title="@string/leitura_lote"
        android:visible="false"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/btn_leitura_serial"
        android:title="@string/leitura_serial"
        android:visible="false"
        app:showAsAction="collapseActionView" />
</menu>
